--- a/dashboard.css
+++ b/dashboard.css
@@ -1,3 +1,16 @@
+.navigationtab{
+	width:120%;
+	min-height:4em;
+	max-height:4em;
+	border:solid;
+	margin-top:-10px;
+	margin-left:-20px;
+	background-color:#093662;
+	font-family:ariel, sans-serif;
+	padding-left:2em;
+
+
+}
 .dashboard{
 	height:10%;
 	text-align:center;
